set widths for columns so sizes are equal and right alignment is correct

--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -459,10 +459,11 @@
 .button-blue-no-underline {
   color: $blue-dark;
   border: none;
-}
+  padding-right: 3 * $spacer;
 
-.button-blue-no-underline:hover,
-.button-blue-no-underline:focus {
-  color: $blue-dark;
-  border: none;
+  &:hover, &:focus {
+    color: $blue-darker;
+    border: none;    
+  }
+
 }
